--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base target="_top">
+    <title>QR Code Scanner</title>
+   
     <style>
         body, html {
             height: 100%;
@@ -20,10 +22,12 @@
 </head>
 <body>
    
-    <iframe src="https://script.google.com/macros/s/AKfycbxz78Pa7-PMLTVVj_kMSfdOh4-CzGLTOCOGRWgaMI_H8AbeYyRSkPHE1QURm42JH4DL/exec"></iframe>
+    <iframe src="https://script.google.com/macros/s/AKfycbxz78Pa7-PMLTVVj_kMSfdOh4-CzGLTOCOGRWgaMI_H8AbeYyRSkPHE1QURm42JH4DL/exec"
+            style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;border: 0;"
+            allow="camera; microphone; geolocation;"></iframe>
 
     <script>
-       
+        
         window.onload = function() {
             var iframe = document.querySelector('iframe');
             iframe.onload = function() {
@@ -36,3 +40,4 @@
     </script>
 </body>
 </html>
+
